Fix background style z-index from -5 to -4

--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -12,14 +12,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -5;
+  z-index: -4;
   width: 100vw;
   height: 100vh;
-  background-color: rbg(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 @media (max-width: 700px) {
   .shadow-overlay {
-    background-color: rbga(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
   }
 }
